--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 This project is written by 
 
 EnGentech (Engr. Iberedem Inyang[engen.inyang@gmail.com])
-please add your details here @BOSS kingsley Chime
+Kngsley Chime (onlinekingsley@gmail.com)
