new commit on pycode

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 The AirBnB project was written by
 
-Iberedem Inyang (EnGentech [engen.inyang@gmail.com]) and
-Kingsley Chime "add your email"
+@AUTHORS:
+	Iberedem Inyang (EnGentech [engen.inyang@gmail.com]) and
+	Chime Kingsley (onlinekingsley@gmail.com)
